Updated: use Message Queue to sent Mails
